# DSC

./: .gitignore
adapters/python/: .project.data.json  adapter.py  copy_files.txt  pyproject.toml  pythonadapter.dsc.resource.json
adapters/python/tests/: .project.data.json  pythontest.dsc.manifests.json  pythonunit.tests.ps1
adapters/python/tests/src/: export.py  get.py  set.py  test.py
archive/apt/: .project.data.json  apt.dsc.resource.json  copy_files.txt
archive/apt/test/assets/: apt_install_rolldice.dsc.yaml  apt_uninstall_rolldice.dsc.yaml  apt_wget.dsc.yaml
resources/Microsoft.Linux.Apt/Package/: AptPackage.py  apt.dsc.resource.json  apt.dsc.yaml  apt_export.dsc.yaml  logger.py  main.py
resources/apt/: .project.data.json  AptPackage.py  apt.dsc.resource.json  apt.dsc.yaml  apt_export.dsc.yaml  copy_files.txt  main.py
resources/apt_python/adapter/: adapter.py  pyproject.toml
resources/apt_python/resources/apt/: AptPackage.py  apt.dsc.resource.json  apt.dsc.yaml  apt_export.dsc.yaml  main.py
